[gd_scene load_steps=4 format=3 uid="uid://c587t6a43whbm"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_yqtta"]
[ext_resource type="Texture2D" uid="uid://cpewxsbl0ymk8" path="res://default-texture.png" id="2_nnwqn"]
[ext_resource type="Texture2D" uid="uid://ddji01apdgaqp" path="res://arrow.png" id="3_hahdm"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqtta")
col = Color(1, 1, 1, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.733333, 0.462745, 0.101961, 1)

[node name="Play Game" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 408.0
offset_top = 344.0
offset_right = 736.0
offset_bottom = 400.0
text = "Play Game"

[node name="Tutorial" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 408.0
offset_top = 416.0
offset_right = 736.0
offset_bottom = 472.0
text = "Tutorial"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 240.0
offset_right = 936.0
offset_bottom = 144.0
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "CASA GRANDE"

[node name="Default-texture" type="Sprite2D" parent="."]
position = Vector2(572.75, 299.25)
scale = Vector2(2.612, 0.436)
texture = ExtResource("2_nnwqn")

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(432, 296)
scale = Vector2(0.142222, 0.142222)
texture = ExtResource("3_hahdm")

[node name="MenuButton" type="MenuButton" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 408.0
offset_top = 272.0
offset_right = 744.0
offset_bottom = 320.0
text = "PLAYER COUNT"
item_count = 3
popup/item_0/text = "2 players"
popup/item_0/id = 0
popup/item_1/text = "3 players"
popup/item_1/id = 1
popup/item_2/text = "4 players"
popup/item_2/id = 2

[node name="Control" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 936.0
offset_top = 528.0
offset_right = 976.0
offset_bottom = 568.0

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -936.0
offset_top = -528.0
offset_right = 216.0
offset_bottom = 120.0
color = Color(0.733333, 0.462745, 0.101961, 1)

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
offset_left = -936.0
offset_top = -528.0
offset_right = -240.0
offset_bottom = -384.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Casa Grande is a board game ....."

[node name="Button" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 184.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 50
text = "BACK"

[connection signal="pressed" from="Play Game" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
